# cpp-test-template

./: .gitignore  Dockerfile  README.md  requirements.txt
.github/workflows/: build-image.yml
tests/: CMakeLists.txt  conftest.py  pathman.py  test_build.py  test_commit_msg.py  test_dynamic.c  test_dynamic.py  test_style.py
unit_tests/: conftest.py  test_compute_expected_output.py
unit_tests/fixtures/: edge_cases.c  invalid_missing_var.c  valid_basic.c  valid_with_suffixes.c
